# gaustudio

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/source/: conf.py  index.rst
docs/source/_static/css/: readthedocs.css
docs/source/apis/: custom.rst  datasets.rst
docs/source/methodology/: extraction.rst  skymodel.rst
gaustudio/cameras/: __init__.py  base.py  camera_paths.py
gaustudio/configs/: 2dgs.yaml  gsplat.yaml  latentgs.yaml  pcd.yaml  vanilla.py  vanilla.yaml
gaustudio/configs/base/: default_model.py  default_optimization.py  default_pipeline.py
gaustudio/datasets/: __init__.py  base.py  colmap.py  deepvoxels.py  mobilebrick.py  mvsnet.py  nerf.py  nerfstudio.py  nero.py  neus.py  nisr.py  nsvf.py  optimization_utils.py  polycam.py  scannet.py  utils.py  vanilla.py  waymo.py
gaustudio/demo/: preprocess.sh  run_colmap.sh
gaustudio/engines/: defaults.py
gaustudio/models/: __init__.py  base.py  general_pcd.py  latent_sg.py  mip_sg.py  sap.py  scaffold_sg.py  utils.py  vanilla_sg.py
gaustudio/pipelines/: __init__.py
gaustudio/pipelines/initializers/: __init__.py  base.py  colmap.py  depth.py  dust3r.py  gaussiansky.py  hloc.py  loftr.py  mask.py  mesh.py  pcd.py
gaustudio/pipelines/optimizers/: __init__.py  base.py  general_optimizer.py
gaustudio/process_data/: base.py  colmap_converter.py  colmap_utils.py  pipeline.py  polycam_utils.py  scannet_utils.py
gaustudio/renderers/: __init__.py  base.py  gsplat_renderer.py  latentgs_renderer.py  mip_renderer.py  pcd_renderer.py  scaffold_renderer.py  surfel_renderer.py  vanilla_renderer.py
gaustudio/scripts/: align_dust3r.py  extract_mesh.py  extract_pcd.py  initialize_gs.py  mesh2gs.py  process_data.py  render.py  render_gs.py  render_mesh.py  texture_mesh.py  train.py  viewer.py
gaustudio/utils/: cameras_utils.py  colmap_utils.py  comm.py  config.py  depth_utils.py  graphics_utils.py  misc.py  pose_utils.py  sh_utils.py
scripts/: render.py  viewer.py
submodules/gaustudio-diff-gaussian-rasterization/: .gitignore  .gitmodules  README.md  rasterize_points.cu  rasterize_points.h  setup.py
submodules/gaustudio-diff-gaussian-rasterization/cuda_rasterizer/: backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
submodules/gaustudio-diff-gaussian-rasterization/gaustudio_diff_gaussian_rasterization/: __init__.py
submodules/mini-dust3r/: .gitignore  LICENSE  README.md  pyproject.toml
submodules/mini-dust3r/mini_dust3r/: image_pairs.py  inference.py  model.py  patch_embed.py  post_process.py  viz.py
submodules/mini-dust3r/mini_dust3r/api/: __init__.py  inference.py
submodules/mini-dust3r/mini_dust3r/cloud_opt/: __init__.py  base_opt.py  init_im_poses.py  modular_optimizer.py  optimizer.py  pair_viewer.py
submodules/mini-dust3r/mini_dust3r/croco/: blocks.py  croco.py  dpt_block.py  masking.py  pos_embed.py
submodules/mini-dust3r/mini_dust3r/heads/: dpt_head.py  linear_head.py
submodules/mini-dust3r/mini_dust3r/utils/: geometry.py  image.py
submodules/mini-dust3r/tools/: app.py  rerun_demo.py
